@@ -23,7 +23,6 @@
  * SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  */
 
-
 package core.xyz.migoo;
 
 
@@ -31,13 +30,16 @@ import core.xyz.migoo.config.ConfigureGroup;
 import core.xyz.migoo.context.Context;
 import core.xyz.migoo.context.SessionContext;
 import core.xyz.migoo.context.TestSuiteContext;
+import core.xyz.migoo.context.variables.AllVariablesWrapper;
+import core.xyz.migoo.context.variables.LocalVariablesWrapper;
+import core.xyz.migoo.context.variables.SessionVariablesWrapper;
 import core.xyz.migoo.context.variables.TestVariablesWrapper;
 import core.xyz.migoo.report.Result;
+import core.xyz.migoo.testelement.TestElementConfigure;
 import core.xyz.migoo.testelement1.TestElement;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.Map;
 import java.util.Objects;
 
 /**
@@ -49,24 +51,21 @@ public class ContextWrapper {
 
     // 原始的上下文作用域链
     private final List<Context> rawContextChain;
-    // 当前上下文，即最后一个上下文对象
-    private final Context currentContext;
-    // 当前上下文，即最后一个上下文对象
-    private final Context sessionContext;
-
     // 合并后的配置组
     private final ConfigureGroup configureGroup;
+    private final AllVariablesWrapper allVariablesWrapper;
+    private final LocalVariablesWrapper localVariablesWrapper;
+    // 当前上下文，即最后一个上下文对象
+    private Context sessionContext;
     private TestSuiteContext testContext;
-
     private TestVariablesWrapper testVariablesWrapper;
     private SessionVariablesWrapper sessionVariablesWrapper;
     // Runner 相关对象
-    private TemplateEngine templateEngine;
     private SessionRunner sessionRunner;
 
     // 测试元件信息
     private TestElement<?> testElement;
-    private Result testResult;
+    private Result<?> testResult;
 
     // ----------- 构造器 -------------
 
@@ -77,34 +76,25 @@ public class ContextWrapper {
      */
     public ContextWrapper(List<Context> contextChain) {
         requiredNotNullAndNotEmpty(contextChain);
-
         // 处理上下文链
         this.rawContextChain = contextChain;
-
         // 合并配置组
-        // TODO 懒加载？
         this.configureGroup = mergeConfigGroup();
 
         // 读取各级上下文
         searchNonTestStepContext();
-        this.currentContext = contextChain.getLast();
+        // 当前上下文，即最后一个上下文对象
+        Context currentContext = contextChain.getLast();
 
         // 处理各级上下文
-        // TODO session 以及更上层的变量包装器，实例化一次就够了?
-        if (globalContext != null) {
-            this.globalVariablesWrapper = new GlobalVariablesWrapper(CollectionUtil.listOf(globalContext));
-        }
-        if (environmentContext != null) {
-            this.environmentVariablesWrapper = new EnvironmentVariablesWrapper(CollectionUtil.listOf(environmentContext));
-        }
         if (testContext != null) {
-            this.testVariablesWrapper = new TestVariablesWrapper(CollectionUtil.listOf(testContext));
+            this.testVariablesWrapper = new TestVariablesWrapper(List.of(testContext));
         }
         if (sessionContext != null) {
-            this.sessionVariablesWrapper = new SessionVariablesWrapper(CollectionUtil.listOf(sessionContext));
+            this.sessionVariablesWrapper = new SessionVariablesWrapper(List.of(sessionContext));
         }
-        this.allVariablesWrapper = new AllVariablesWrapper(Collections.unmodifiableList(invertedContextChain));
-        this.localVariablesWrapper = new LocalVariablesWrapper(CollectionUtil.listOf(currentContext));
+        this.allVariablesWrapper = new AllVariablesWrapper(Collections.unmodifiableList(rawContextChain));
+        this.localVariablesWrapper = new LocalVariablesWrapper(List.of(currentContext));
     }
 
     /**
@@ -115,7 +105,6 @@ public class ContextWrapper {
     public ContextWrapper(SessionRunner sessionRunner) {
         this(sessionRunner.getContextChain());
         this.sessionRunner = sessionRunner;
-        this.templateEngine = sessionRunner.getConfiguration().getTemplateEngine();
     }
 
     // == 构造器辅助方法 ==
@@ -134,12 +123,8 @@ public class ContextWrapper {
     private void searchNonTestStepContext() {
         // 如果上下文链中存在多个 SessionContext，则取最后一个，即最近的一个
         rawContextChain.forEach(ctx -> {
-            if (ctx instanceof GlobalContext) {
-                this.globalContext = (GlobalContext) ctx;
-            } else if (ctx instanceof EnvironmentContext) {
-                this.environmentContext = (EnvironmentContext) ctx;
-            } else if (ctx instanceof TestContext) {
-                this.testContext = (TestContext) ctx;
+            if (ctx instanceof TestSuiteContext) {
+                this.testContext = (TestSuiteContext) ctx;
             } else if (ctx instanceof SessionContext) {
                 this.sessionContext = ctx;
             }
@@ -147,86 +132,22 @@ public class ContextWrapper {
     }
 
     private ConfigureGroup mergeConfigGroup() {
-        ConfigureGroup config = new TestElementConfig();
-        for (Context context : invertedContextChain) {
-            ConfigureGroup configureGroup = context.getConfigGroup();
+        ConfigureGroup config = new TestElementConfigure();
+        for (var context : rawContextChain) {
+            var configureGroup = context.getConfigGroup();
             config = config.merge(configureGroup);
         }
         return config;
     }
 
     // ----------- ContextWrapper 对外 API -------------
-
-    /**
-     * @see TemplateEngine#eval(ContextWrapper, Object)
-     */
     public Object eval(Object obj) {
-        return templateEngine.eval(this, obj);
+        // todo 这里要实现变量计算
+        return null;
     }
-
-    public Object eval(Object obj, boolean force) {
-        return templateEngine.eval(this, obj, force);
-    }
-
-    /**
-     * @see TemplateEngine#eval(ContextWrapper, Map)
-     */
-    public Map<String, String> eval(Map<String, String> map) {
-        return templateEngine.eval(this, map);
-    }
-
-    /**
-     * @see TemplateEngine#eval(ContextWrapper, List)
-     */
-    public List<String> eval(List<String> list) {
-        return templateEngine.eval(this, list);
-    }
-
-    /**
-     * 模板计算
-     *
-     * @param text 模板字符串
-     * @return 模板计算结果
-     */
-    public Object eval(String text) {
-        return templateEngine.eval(this, text);
-    }
-
-    /**
-     * 当且仅当参数对象的类型为 String 类型时，才进行计算，否则直接返回。
-     *
-     * @param obj 待计算对象
-     * @return 计算结果（仅当参数为 String 类型时才会计算）
-     */
-    public Object evalIfString(Object obj) {
-        if (obj instanceof String) {
-            return templateEngine.eval(this, obj);
-        }
-        return obj;
-    }
-
-    /**
-     * 模板计算（不会返回 null，但当参数为 null 时返回 null 字符串）
-     *
-     * @param text 模板字符串
-     * @return 模板计算结果的字符串表示，如果参数为 null，则返回 null 字符串
-     */
-    public String evalAsString(String text) {
-        return String.valueOf(eval(text));
-    }
-
-    // == Getter/Setter ==
 
     public List<Context> getContextChain() {
         return rawContextChain;
-    }
-
-    public GlobalVariablesWrapper getGlobalVariablesWrapper() {
-        return globalVariablesWrapper;
-    }
-
-    public EnvironmentVariablesWrapper getEnvironmentVariablesWrapper() {
-        return environmentVariablesWrapper;
     }
 
     public TestVariablesWrapper getTestVariablesWrapper() {
@@ -261,11 +182,11 @@ public class ContextWrapper {
         this.testElement = testElement;
     }
 
-    public Result getTestResult() {
+    public Result<?> getTestResult() {
         return testResult;
     }
 
-    public void setTestResult(Result testResult) {
+    public void setTestResult(Result<?> testResult) {
         this.testResult = testResult;
     }
 }
